test/fail/ForCountStmt-action-2.app
//Expression should be of type

application test

  entity Entity2 {
    
  }

  function home(){
    for(i:Int from Entity2{} to 4){
    }
  }